tests/fixtures/invalid/struct_pointer_null_dereference.c
struct Point {
    int x;
};

int main() {
    struct Point *p = 0;
    return p->x;
}
